# playground

./: .gitignore  AGENTS.md  LICENSE  README.md  ghostty.lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: check.yml
examples/: README.md
examples/demo/: package.json  tsconfig.json
examples/demo/src/: index.ts
examples/effection/: bash-vi-roundtrip.test.ts
examples/focus/: package.json
examples/focus/src/: index.ts
examples/input/: package.json
examples/input/src/: 1-raw.ts  2-parser.ts  3-signals.ts  5-stream.ts  helper.ts
examples/input/ui/: 4-modes.ts  raw.ts
experiments/ghostwright/: .gitignore  AGENTS.md  HOST-COMPARISON.md  PERFORMANCE.md  README.md  ghostty.lock.json  package.json  tsconfig.build.json
experiments/ghostwright/docs/: agent-quickstart.md  architecture.md  choosing-assertions.md  debugging-failures.md  interaction-recipes.md
experiments/ghostwright/native/pty-host-rust/: Cargo.toml
experiments/ghostwright/native/pty-host-rust/src/: main.rs  protocol.rs  session.rs
experiments/ghostwright/patches/: 0001-freestanding-kitty-direct-only.patch
experiments/ghostwright/scripts/: benchmark.ts  build-artifacts.ts  build-ghostty-vt.ts  (+7 more)
native/pty-host-c/: session.c  session.h
scripts/: demo.mjs  fix-declarations.ts  playground.ts  verify-artifacts.ts
src/: errors.ts  types.ts
src/assertions/: index.ts  types-internal.ts
src/effection/: index.ts
src/terminal/: session.ts  wasm.ts
src/tracing/: replay.ts
test/: assertions-trace.test.ts  observability.test.ts  session.test.ts
(+33 files in other folders)
