[package]
name = "ghostwright-pty-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
minicbor = { version = "0.25", default-features = false, features = ["std"] }
nix = { version = "0.30", features = ["fs", "poll", "process", "signal", "term"] }
thiserror = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
